--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@
 }
 
 .c1i1 {
-    
+
     height: 250px;
     width: 100%;
     border-radius: 10px;
@@ -156,8 +156,8 @@
 }
 
 
-
 .card2_img {
+
     height: 200px;
     width: 100%;
     border-radius: 10px;
@@ -181,7 +181,7 @@
 }
 
 .card3_row {
-    margin-bottom: 40px;
+    margin-bottom: 80px;
     display: flex;
     justify-content: space-between;
 }
@@ -651,6 +651,28 @@
     background-color: #FEEFD0;
     width: 100%;
     height: auto;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 0px auto;
+}
+.shadow {
+    box-shadow: none;
+    width: 80%;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 15px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background-color: #ffff;
+    box-shadow: 0px 14px 15px rgba(255, 174, 0, 0.01), 0px 27px 82px rgba(255, 174, 0, 0.28);
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+
+
 }
 
 .simple_heading {
@@ -662,24 +684,30 @@
 .hr_img {
     height: 70px;
 }
-.large_img{
+
+.large_img {
     height: 500px;
     width: 100%;
 }
 
 .simple_row {
-    margin-top: 70px;
-    margin-bottom: 40px;
-    background-color: #ffff;
+    /* margin-top: 70px;
+    margin-bottom: 40px; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.footer_line{
+
+.footer_line {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.last_div{
+
+.last_div {
     text-align: end;
+}
+
+a:hover {
+    color: green;
 }
